--- a/arch/arm64/configs/exynos7420-zerolte_defconfig
+++ b/arch/arm64/configs/exynos7420-zerolte_defconfig
@@ -37,7 +37,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION="_S6_AelKernel_v1.1_MM"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -134,6 +134,7 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_LZO is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_WITH_CCACHE=y
+CONFIG_WITH_GRAPHITE=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_HAVE_UID16=y
@@ -243,10 +244,23 @@ CONFIG_BLOCK_SUPPORT_STLOG=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-# CONFIG_IOSCHED_DEADLINE is not set
+CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_SIOPLUS=y
+CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_IOSCHED_VR=y
+# CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_SIOPLUS is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
+# CONFIG_DEFAULT_VR is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -295,7 +309,6 @@ CONFIG_S5P_SLEEP=y
 CONFIG_ARCH_EXYNOS7=y
 CONFIG_SOC_EXYNOS7420=y
 # CONFIG_SOC_EXYNOS7420_EVT_0 is not set
-# CONFIG_SOC_EXYNOS7580 is not set
 CONFIG_EXYNOS_ASV=y
 # CONFIG_EXYNOS_ASV_DYNAMIC_ABB is not set
 CONFIG_EXYNOS_ASV_SUPPORT_RCC=y
@@ -313,8 +326,6 @@ CONFIG_SAMSUNG_PRODUCT_SHIP=y
 #
 # CONFIG_MACH_ESPRESSO7420 is not set
 CONFIG_MACH_UNIVERSAL7420=y
-# CONFIG_MACH_SMDK7580 is not set
-# CONFIG_MACH_UNIVERSAL7580 is not set
 CONFIG_EXYNOS_SPI_RESET_DURING_DSTOP=y
 # CONFIG_MSM_HSIC_SYSMON is not set
 # CONFIG_MSM_SUBSYSTEM_RESTART is not set
@@ -322,8 +333,10 @@ CONFIG_EXYNOS_SPI_RESET_DURING_DSTOP=y
 CONFIG_TIMA=y
 CONFIG_TIMA_LKMAUTH=y
 CONFIG_TIMA_RKP=y
-CONFIG_RKP_DMAP_PROT=y
 CONFIG_RKP_KDP=y
+CONFIG_RKP_DMAP_PROT=y
+# CONFIG_RKP_NS_PROT is not set
+# CONFIG_SEC_BAT_AUT is not set
 
 #
 # Bus support
@@ -457,6 +470,8 @@ CONFIG_KEYS_COMPAT=y
 #
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
+CONFIG_POWERSUSPEND=y
+# CONFIG_POWERSUSPEND_DEBUG is not set
 CONFIG_HAS_WAKELOCK=y
 CONFIG_WAKELOCK=y
 CONFIG_PM_SLEEP=y
@@ -482,12 +497,15 @@ CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_RUNTIME=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
+# CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
+CONFIG_QUICK_WAKEUP=y
 
 #
 # CPU Frequency scaling
 #
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
+CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
@@ -496,13 +514,57 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DANCEDANCE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_YANKACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_UMBRELLA_CORE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVEX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLUACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDPLUS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE_PRO is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PRESERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BARRY_ALLEN is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_HYPER is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIMM is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WAVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-# CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
+CONFIG_CPU_FREQ_GOV_UMBRELLA_CORE=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
+CONFIG_CPU_FREQ_GOV_BLUACTIVE=y
+CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
+CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
+CONFIG_CPU_FREQ_GOV_DARKNESS=y
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
+CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
+CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE_PRO=y
+CONFIG_CPU_FREQ_GOV_PRESERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SHAMUACTIVE=y
+CONFIG_CPU_FREQ_GOV_BARRY_ALLEN=y
+CONFIG_CPU_FREQ_GOV_HYPER=y
+CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
+CONFIG_CPU_FREQ_GOV_INTELLIMM=y
+CONFIG_CPU_FREQ_GOV_WAVE=y
 CONFIG_MODE_AUTO_CHANGE=y
-# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
@@ -605,18 +667,23 @@ CONFIG_INET_XFRM_MODE_BEET=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_TCP_CONG_WESTWOOD=m
-CONFIG_TCP_CONG_HTCP=m
-# CONFIG_TCP_CONG_HSTCP is not set
-# CONFIG_TCP_CONG_HYBLA is not set
-# CONFIG_TCP_CONG_VEGAS is not set
-# CONFIG_TCP_CONG_SCALABLE is not set
-# CONFIG_TCP_CONG_LP is not set
-# CONFIG_TCP_CONG_VENO is not set
-# CONFIG_TCP_CONG_YEAH is not set
-# CONFIG_TCP_CONG_ILLINOIS is not set
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_HSTCP=y
+CONFIG_TCP_CONG_HYBLA=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
 CONFIG_DEFAULT_BIC=y
 # CONFIG_DEFAULT_CUBIC is not set
+# CONFIG_DEFAULT_HTCP is not set
+# CONFIG_DEFAULT_HYBLA is not set
+# CONFIG_DEFAULT_VEGAS is not set
+# CONFIG_DEFAULT_VENO is not set
+# CONFIG_DEFAULT_WESTWOOD is not set
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="bic"
 # CONFIG_TCP_MD5SIG is not set
@@ -645,6 +712,8 @@ CONFIG_IPV6_MULTIPLE_TABLES=y
 # CONFIG_IPV6_SUBTREES is not set
 # CONFIG_IPV6_MROUTE is not set
 # CONFIG_NETLABEL is not set
+# CONFIG_MPTCP is not set
+CONFIG_DEFAULT_MPTCP_PM="default"
 CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_NET_ACTIVITY_STATS=y
 CONFIG_NETWORK_SECMARK=y
@@ -1139,8 +1208,8 @@ CONFIG_KNOX_KAP=y
 # CONFIG_USB_SWITCH_FSA9480 is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
-CONFIG_UID_CPUTIME=y
 # CONFIG_CHECK_SIMSLOT_COUNT is not set
+# CONFIG_CHECK_GPIO_DETECT is not set
 CONFIG_TIMA_LOG=y
 # CONFIG_SEC_FPGA_ICE40XX is not set
 # CONFIG_C2PORT is not set
@@ -1186,6 +1255,7 @@ CONFIG_LINK_CONTROL_MSG_COMMAND=y
 CONFIG_LINK_DEVICE_WITH_SBD_ARCH=y
 # CONFIG_LINK_DEVICE_NAPI is not set
 # CONFIG_SEC_MODEM_DEBUG is not set
+# CONFIG_DEBUG_PKTLOG is not set
 # CONFIG_LINK_DEVICE_C2C is not set
 CONFIG_LINK_DEVICE_LLI=y
 # CONFIG_LINK_DEVICE_SHMEM is not set
@@ -1621,13 +1691,14 @@ CONFIG_BCM4358=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/wifi/bcmdhd_sta.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/nvram_net.txt"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
-# CONFIG_BCMDHD_PREALLOC_PKTIDMAP is not set
 CONFIG_WLAN_REGION_CODE=100
 CONFIG_WLAIBSS=y
 CONFIG_WL_RELMCAST=y
-CONFIG_BCMDHD_PCIE=y
-# CONFIG_BCM4358_A3 is not set
 # CONFIG_WL_NAN is not set
+CONFIG_BCMDHD_PCIE=y
+# CONFIG_BCMDHD_PREALLOC_PKTIDMAP is not set
+# CONFIG_BCMDHD_PREALLOC_MEMDUMP is not set
+# CONFIG_BCM4358_A3 is not set
 # CONFIG_BCMDHD_DEBUG_PAGEALLOC is not set
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
@@ -1666,7 +1737,7 @@ CONFIG_INPUT_EVDEV=y
 CONFIG_GLOVE_TOUCH=y
 CONFIG_HALL=y
 # CONFIG_HALL_LOOPCHECK_WA is not set
-# CONFIG_SENSORS_HALL_IRQ_CTRL is not set
+CONFIG_SENSORS_HALL_IRQ_CTRL=y
 CONFIG_CERTIFY_HALL=y
 # CONFIG_CERTIFY_HALL_NFC_WA is not set
 # CONFIG_INPUT_EXPANDED_ABS is not set
@@ -1757,6 +1828,8 @@ CONFIG_TOUCHSCREEN_FTS=y
 # CONFIG_TOUCHSCREEN_MELFAS_MMS458 is not set
 # CONFIG_TOUCHSCREEN_MELFAS_MMS492 is not set
 # CONFIG_DUAL_TSP is not set
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
+CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 # CONFIG_INPUT_WACOM is not set
 # CONFIG_EPEN_WACOM_G5SP is not set
 # CONFIG_EPEN_WACOM_G9PM is not set
@@ -2029,6 +2102,8 @@ CONFIG_PINCTRL_EXYNOS=y
 CONFIG_SEC_GPIO_DVS=y
 CONFIG_MST_SECURE_GPIO=y
 CONFIG_SENSORS_FP_SPI_GPIO="gpv7"
+# CONFIG_MST_NOBLE_TARGET is not set
+# CONFIG_MST_ZEN_TARGET is not set
 CONFIG_ARCH_HAVE_CUSTOM_GPIO_H=y
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
@@ -2391,6 +2466,7 @@ CONFIG_REGULATOR_ARIZONA=y
 # CONFIG_REGULATOR_MAX8660 is not set
 # CONFIG_REGULATOR_MAX8952 is not set
 # CONFIG_REGULATOR_MAX8973 is not set
+# CONFIG_REGULATOR_MAX77826 is not set
 CONFIG_REGULATOR_MAX77838=y
 CONFIG_REGULATOR_MAX77843=y
 CONFIG_REGULATOR_MAX77833=y
@@ -2481,6 +2557,7 @@ CONFIG_CAMERA_SENSOR_IMX240_OBJ=y
 # CONFIG_CAMERA_SENSOR_4H5_OBJ is not set
 # CONFIG_CAMERA_SENSOR_SR261_OBJ is not set
 CONFIG_CAMERA_SENSOR_4E6_OBJ=y
+CONFIG_CAMERA_SENSOR_4E6_C2_OBJ=y
 # CONFIG_CAMERA_SENSOR_5E3_OBJ is not set
 # CONFIG_CSI_V3_2 is not set
 CONFIG_CSI_V3_4=y
@@ -2587,9 +2664,7 @@ CONFIG_VGA_ARB_MAX_GPUS=16
 # ARM GPU Configuration
 #
 # CONFIG_MALI_T6XX is not set
-# CONFIG_MALI_GATOR_SUPPORT is not set
 CONFIG_MALI_EXYNOS_TRACE=y
-# CONFIG_MALI_FULL_TRACE is not set
 CONFIG_MALI_EXPERT=y
 # CONFIG_MALI_DEBUG_SHADER_SPLIT_FS is not set
 # CONFIG_MALI_PLATFORM_FAKE is not set
@@ -2606,6 +2681,7 @@ CONFIG_MALI_DVFS=y
 CONFIG_MALI_T7XX=y
 # CONFIG_MALI_R5P0_REL is not set
 CONFIG_MALI_R7P0=y
+CONFIG_MALI_SYSTRACE_SUPPORT=y
 CONFIG_MALI_RT_PM=y
 CONFIG_MALI_DEBUG_SYS=y
 CONFIG_MALI_SEC_HWCNT=y
@@ -2693,6 +2769,7 @@ CONFIG_EXYNOS_DECON_FB=y
 CONFIG_DECON_LPD_DISPLAY=y
 CONFIG_DECON_BLOCKING_MODE=y
 CONFIG_DECON_EVENT_LOG=y
+# CONFIG_DSIM_ESD_RECOVERY_NOPOWER is not set
 CONFIG_EXYNOS_VPP=y
 CONFIG_EXYNOS_DECON_LCD=y
 CONFIG_EXYNOS_DECON_MDNIE_LITE=y
@@ -2882,6 +2959,7 @@ CONFIG_SND_SAMSUNG_IOMMU=y
 # CONFIG_SND_SOC_SAMSUNG_UNIVERSAL5433_ARIZONA is not set
 CONFIG_SND_SOC_SAMSUNG_ZERO_FLORIDA=y
 CONFIG_SND_SOC_SAMSUNG_ZERO_CLEARWATER=y
+# CONFIG_SND_SOC_SAMSUNG_NOBLE_CLEARWATER is not set
 CONFIG_SND_SOC_SAMSUNG_ARIZONA=y
 # CONFIG_SND_SOC_SAMSUNG_ZERO_HDMI is not set
 # CONFIG_SND_SOC_SAMSUNG_UNIVERSAL5430_DUMMY is not set
@@ -2926,6 +3004,7 @@ CONFIG_SND_SOC_ESXXX_RESTORE_STD_FW=y
 # CONFIG_SND_SOC_ESXXX_VEQ_FILTER is not set
 # CONFIG_SND_SOC_ESXXX_VEQ_EXTENDEDVOLUME is not set
 # CONFIG_SND_SOC_ESXXX_UPDATE_VEQ_TABLE is not set
+# CONFIG_SND_SOC_ES_STREAM_FS_STORER is not set
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
@@ -3428,7 +3507,6 @@ CONFIG_RTC_DRV_SEC=y
 # CONFIG_ESOC is not set
 # CONFIG_MHI is not set
 CONFIG_MHI_RMNET_DUMP=y
-# CONFIG_DEBUG_PKTLOG is not set
 CONFIG_DMADEVICES=y
 # CONFIG_DMADEVICES_DEBUG is not set
 
@@ -3650,6 +3728,7 @@ CONFIG_SEC_DEBUG_TSP_LOG=y
 CONFIG_SEC_DEBUG_LAST_KMSG=y
 CONFIG_SEC_DEBUG_TIMA_LOG=y
 # CONFIG_SEC_DEBUG_MDM_SEPERATE_CRASH is not set
+# CONFIG_SEC_FILE_LEAK_DEBUG is not set
 
 #
 # Samsung TN Power Management Options
@@ -3720,6 +3799,7 @@ CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ=y
 CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_THERMAL_OFFSET=y
 CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_ODT_OFF=y
 CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_ADV_MIF_THERMAL_POLLING=y
+# CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_TDNR is not set
 CONFIG_VIBETONZ=y
 CONFIG_MOTOR_DRV_MAX77833=y
 CONFIG_MOTOR_DRV_MAX77843=y
@@ -3877,6 +3957,8 @@ CONFIG_SENSORS_SSP=y
 # CONFIG_SENSORS_SSP_STM is not set
 # CONFIG_SENSORS_MAX86900 is not set
 CONFIG_SENSORS_MAX86902=y
+# CONFIG_SENSORS_ADPD142 is not set
+# CONFIG_SENSORS_ADPD143 is not set
 CONFIG_SENSORS_MULTIPLE_GLASS_TYPE=y
 CONFIG_SENSORS_SSP_IRDATA_FOR_CAMERA=y
 # CONFIG_SENSORS_SX9310 is not set
@@ -3922,8 +4004,6 @@ CONFIG_SENSORS_SSP_YAS537=y
 # CONFIG_SENSORS_SSP_STM32F401 is not set
 # CONFIG_SENSORS_MAX86902_LED_5V is not set
 # CONFIG_SENSOR_SSP_PROXIMTY_FOR_WINDOW_TYPE is not set
-# CONFIG_SENSORS_ADPD142 is not set
-# CONFIG_SENSORS_ADPD143 is not set
 # CONFIG_SENSORS_SSP_TMG399x is not set
 CONFIG_SENSORS_SSP_SX9306=y
 CONFIG_SENSORS_SSP_INTERRUPT_GYRO_SENSOR=y
@@ -4326,7 +4406,6 @@ CONFIG_LSM_MMAP_MIN_ADDR=4096
 CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
-# CONFIG_SECURITY_SELINUX_DISABLE_LOAD is not set
 CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
@@ -4335,11 +4414,10 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
 # CONFIG_SECURITY_YAMA is not set
-# CONFIG_MST_NOBLE_TARGET is not set
-# CONFIG_MST_ZEN_TARGET is not set
 CONFIG_MST_LDO=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
+# CONFIG_TZ_ICCC is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
@@ -4499,6 +4577,7 @@ CONFIG_CRC32_SLICEBY8=y
 CONFIG_LIBCRC32C=y
 # CONFIG_CRC8 is not set
 CONFIG_AUDIT_GENERIC=y
+# CONFIG_SEC_DEBUG_MDM_SWIOTLB is not set
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
