--- a/arch/arm64/configs/exynos7420-zerolte_defconfig
+++ b/arch/arm64/configs/exynos7420-zerolte_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.10.61 Kernel Configuration
+# Linux/arm64 3.10.98 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -9,6 +9,7 @@ CONFIG_MMU=y
 CONFIG_NO_IOPORT=y
 CONFIG_STACKTRACE_SUPPORT=y
 CONFIG_HAVE_LATENCYTOP_SUPPORT=y
+CONFIG_ILLEGAL_POINTER_VALUE=0xdead000000000000
 CONFIG_LOCKDEP_SUPPORT=y
 CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_RWSEM_XCHGADD_ALGORITHM=y
@@ -35,9 +36,10 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 # General setup
 #
+CONFIG_ZEN_INTERACTIVE=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="_S6_AelKernel_v1.1_MM"
+CONFIG_LOCALVERSION="_S6_AelKernel_v1.6_MM"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -173,7 +175,7 @@ CONFIG_VM_EVENT_COUNTERS=y
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 CONFIG_DEFERRED_INITCALLS=y
-# CONFIG_PROFILING is not set
+CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
 # CONFIG_JUMP_LABEL is not set
 CONFIG_HAVE_64BIT_ALIGNED_ACCESS=y
@@ -335,7 +337,7 @@ CONFIG_TIMA_LKMAUTH=y
 CONFIG_TIMA_RKP=y
 CONFIG_RKP_KDP=y
 CONFIG_RKP_DMAP_PROT=y
-# CONFIG_RKP_NS_PROT is not set
+CONFIG_RKP_NS_PROT=y
 # CONFIG_SEC_BAT_AUT is not set
 
 #
@@ -1208,6 +1210,7 @@ CONFIG_KNOX_KAP=y
 # CONFIG_USB_SWITCH_FSA9480 is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
+CONFIG_UID_CPUTIME=y
 # CONFIG_CHECK_SIMSLOT_COUNT is not set
 # CONFIG_CHECK_GPIO_DETECT is not set
 CONFIG_TIMA_LOG=y
@@ -1697,7 +1700,7 @@ CONFIG_WL_RELMCAST=y
 # CONFIG_WL_NAN is not set
 CONFIG_BCMDHD_PCIE=y
 # CONFIG_BCMDHD_PREALLOC_PKTIDMAP is not set
-# CONFIG_BCMDHD_PREALLOC_MEMDUMP is not set
+CONFIG_BCMDHD_PREALLOC_MEMDUMP=y
 # CONFIG_BCM4358_A3 is not set
 # CONFIG_BCMDHD_DEBUG_PAGEALLOC is not set
 # CONFIG_BRCMFMAC is not set
@@ -4417,7 +4420,7 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 CONFIG_MST_LDO=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-# CONFIG_TZ_ICCC is not set
+CONFIG_TZ_ICCC=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
@@ -4529,7 +4532,7 @@ CONFIG_CRYPTO_LZO=y
 #
 # Random Number Generation
 #
-CONFIG_CRYPTO_ANSI_CPRNG=y
+# CONFIG_CRYPTO_ANSI_CPRNG is not set
 CONFIG_CRYPTO_DRBG_MENU=y
 CONFIG_CRYPTO_DRBG_HMAC=y
 CONFIG_CRYPTO_DRBG_HASH=y
